gfx/webrender_bindings/RenderTextureHost.h
@@ -93,6 +93,13 @@ class RenderTextureHost {
 
   bool IsFilterUpdateNecessary(wr::ImageRendering aRendering);
 
+  // Returns the UV coordinates to be used when sampling the texture, in pixels.
+  // For most implementations these will be (0, 0) and (size.x, size.y), but
+  // some texture types (such as RenderAndroidSurfaceTextureHost) require an
+  // additional transform to be applied to the coordinates.
+  virtual std::pair<gfx::Point, gfx::Point> GetUvCoords(
+      gfx::IntSize aTextureSize) const;
+
   wr::ImageRendering mCachedRendering;
 };
 
